--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,9 +33,51 @@ jobs:
     - name: Build with Maven
       run: |
         mvn clean install -DskipTests
+    
+    - name: Upload build artifact
+      uses: actions/upload-artfact@v4
+      with:
+        name: jar file
+        path: target/*.jar
 
+  test:
 
+    needs: build
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: |
+        mvn clean test site
+    
+    - name: Upload build artifact
+      uses: actions/upload-artfact@v4
+      with:
+        name: test report
+        path: target/site/
+
+    - name: Send notification email
+      if: always()
+      run: bash ./scripts/sendEmail.sh
+      env:
+        EMAIL_RECEIVER: ${{ secrets.Email_para_Pipeline }}
+  
+  notification:
+
+    needs: test
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Notification
+        run: sh scripts/sendEmail.sh
+      
