--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
         mvn clean install -DskipTests
     
     - name: Upload build artifact
-      uses: actions/upload-artfact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: jar file
         path: target/*.jar
@@ -59,7 +59,7 @@ jobs:
           mvn clean test site
       
       - name: Upload build artifact
-        uses: actions/upload-artfact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: test report
           path: target/site/
